idf_component_register(SRCS "main.c"
                            "./blufi/blufi_example_main.c"
                            "./blufi/blufi_security.c"
                            "./blufi/blufi_init.c"
                            "./tcp_server/tcp_server.c"
                            "./gpio/gpio.c"
                    INCLUDE_DIRS ".")
